--- a/html/index.html
+++ b/html/index.html
@@ -34,6 +34,8 @@
             </div>
             <br>
             <button class="ui inverted primary button" id="search">Search</button>
+            <br><br>
+            <a href="/leaderboards">Leaderboards</a>
         </div>
         <div style="bottom: 5px; width: 100%; text-align: center; font-style: italic; position: absolute; color: lightgray; margin-top: 10px;">Made with precision german engineering & calculated hungarian stats.</div>
 
