--- a/html/leaderboards.html
+++ b/html/leaderboards.html
@@ -109,9 +109,11 @@
                             let row = $('<tr></tr>').attr("player", e);
                             row.append($('<td></td>').text(idx+1 + "."));
                             row.append($('<td></td>').text(e));
+                            let shouldAdd = true;
                             switch($('#stat').val()) {
                                 case 'WR':
                                     row.append($("<td></td>").text(Math.floor((data.rankings[e].won/data.rankings[e].matches)*1000)/10 + "%"));
+                                    if(data.rankings[e].matches == 0) shouldAdd = false;
                                     break;
                                 case 'RRParticipations':
                                     row.append($("<td></td>").text(data.rankings[e].rrCompetitions.length));
@@ -124,6 +126,7 @@
                                     break;
                                 case 'PercentageDecider':
                                     row.append($("<td></td>").text(Math.floor((data.rankings[e].matchesWithDecider/data.rankings[e].matches)*1000)/10 + "%"));
+                                    if(data.rankings[e].matches == 0) shouldAdd = false;
                                     break;
                                 case 'FinalAppearances':
                                     row.append($("<td></td>").text(data.rankings[e].grandFinalAppearances));
@@ -136,9 +139,10 @@
                                     break;
                                 case 'MapWR':
                                     row.append($("<td></td>").text(Math.floor((data.rankings[e].mapsWon[mapAbreviationToArrayIndex($('#map').val())]/data.rankings[e].mapsPlayed[mapAbreviationToArrayIndex($('#map').val())])*1000)/10 + "%"));
+                                    if(data.rankings[e].mapsPlayed[mapAbreviationToArrayIndex($('#map').val())] == 0) shouldAdd = false;
                                     break;   
                             }
-                            $('#ranking').append(row);
+                            if(shouldAdd) $('#ranking').append(row);
                         })
                     }
                 })
