First database check

--- a/html/backend/index.html
+++ b/html/backend/index.html
@@ -87,6 +87,16 @@
                 </div>
                 <div class="item">
                     <div class="right floated content">
+                        <a class="ui button" href="/backend/databaseChecks"><i class="share icon"></i></a>
+                    </div>
+                    <i class="large stethoscope middle aligned icon"></i>
+                    <div class="content">
+                        <a class="header" style="font-weight: bold;">Database checks</a>
+                        <div class="description">Runs various checks on the database.</div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="right floated content">
                         <button class="ui button" id="reload"><i class="upload icon"></i></button>
                     </div>
                     <i class="large upload middle aligned icon"></i>
