--- a/html/index.html
+++ b/html/index.html
@@ -35,7 +35,8 @@
             <br>
             <button class="ui inverted primary button" id="search">Search</button>
             <br><br>
-            <a href="/leaderboards">Leaderboards</a>
+            <a style="margin: 20px" href="/leaderboards">Leaderboards</a>
+            <a style="margin: 20px" href="/records">Records</a>
         </div>
         <div style="bottom: 5px; width: 100%; text-align: center; font-style: italic; position: absolute; color: lightgray; margin-top: 10px;">Made with precision german engineering & calculated hungarian stats.</div>
 
