--- a/html/records.html
+++ b/html/records.html
@@ -15,6 +15,20 @@
             <table class="ui structured celled inverted table">
                 <thead>
                     <tr>
+                        <th class="three wide">Record</th>
+                        <th class="six wide">Maps</th>
+                        <th class="one wide">Time</th>
+                        <th class="two wide">Players</th>
+                        <th class="two wide">Match</th>
+                    </tr>
+                </thead>
+                <tbody id="otherList"></tbody>
+            </table>
+            <hr>
+            <h3>Per-Map-Records</h3>
+            <table class="ui structured celled inverted table">
+                <thead>
+                    <tr>
                         <th class="one wide">Map</th>
                         <th class="eight wide">Spin</th>
                         <th class="one wide">Time</th>
@@ -31,8 +45,7 @@
         <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.min.js"></script>
         <script src="utils.js"></script>
         <script>
-            function addRecord(record) {
-                console.log("addRecord(" + record.map + ")")
+            function addMapRecord(record) {
                 let row = $('<tr></tr>');
                 row.append($("<td></td>").text(record.map));
                 row.append($("<td></td>").text(record.spin));
@@ -42,11 +55,28 @@
                 $('#recordList').append(row);
             }
 
+            function addOtherRecord(record) {
+                let row = $('<tr></tr>');
+                row.append($("<td></td>").text(record.record));
+                row.append($("<td></td>").text(record.maps));
+                row.append($("<td></td>").text(record.time));
+                let players = $('<td></td>');
+                players.append($('<a></a>').attr("href", "/" + record.players[0]).text(record.players[0]));
+                players.append(" & ");
+                players.append($('<a></a>').attr("href", "/" + record.players[1]).text(record.players[1]));
+                row.append(players);
+                row.append($("<td></td>").text(record.match));
+                $('#otherList').append(row);
+            }
+
             $.getJSON("/api/records", (data, success, x) => {
                 if(success === "success") {
                     console.log(data);
-                    data.forEach(element => {
-                        addRecord(element);
+                    data.maps.forEach(element => {
+                        addMapRecord(element);
+                    });
+                    data.other.forEach(element => {
+                        addOtherRecord(element);
                     });
                 }
             })
