Leaderboards include data from active comp aswell

--- a/html/backend/index.html
+++ b/html/backend/index.html
@@ -112,7 +112,7 @@
                     <i class="large calculator middle aligned icon"></i>
                     <div class="content">
                         <a class="header" style="font-weight: bold;">Recalculate leaderboards</a>
-                        <div class="description">Recalculate all leaderboard data.</div>
+                        <div class="description">Recalculate all leaderboard data. (Does not include data from active competition - load a player page instead)</div>
                     </div>
                 </div>
                 <div class="item">
