--- a/html/backend/matchList.html
+++ b/html/backend/matchList.html
@@ -191,9 +191,15 @@
                 if(match.winner === 1) {
                     winnerSelectRow.append("<option value='1' selected>1 (" + match.player1 + ")</option>");
                     winnerSelectRow.append("<option value='2'>2 (" + match.player2 + ")</option>");
-                } else {
+                    winnerSelectRow.append("<option value='0'>0 (Draw)</option>");
+                } else if(match.winner === 2) {
                     winnerSelectRow.append("<option value='1'>1 (" + match.player1 + ")</option>");
                     winnerSelectRow.append("<option value='2' selected>2 (" + match.player2 + ")</option>");
+                    winnerSelectRow.append("<option value='0'>0 (Draw)</option>");
+                } else {
+                    winnerSelectRow.append("<option value='1'>1 (" + match.player1 + ")</option>");
+                    winnerSelectRow.append("<option value='2'>2 (" + match.player2 + ")</option>");
+                    winnerSelectRow.append("<option value='0' selected>0 (Draw)</option>");
                 }
                 rows[0].append($("<td></td>").attr("rowspan", amountRows).append(winnerSelectRow));
 
